[package]
name = "rust-p2p"
version = "0.1.0"
authors = ["rarebu, sloug"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipaddress = "0.1.2"
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3"
serde_derive = "1.0.87"
bincode = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
actix = "0.9.0"
futures-util = "0.3.5"